--- a/!/index.html
+++ b/!/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>@hyper-hyper/hyper-server</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 <body>
   <main>
